--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -1,32 +1,30 @@
-name: E2E Tests
+# name: E2E Tests
+# on:
+#   push:
+#   pull_request:
+# jobs:
+#   test-e2e:
+#     name: Run on Ubuntu
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Clone the code
+#         uses: actions/checkout@v4
 
-on:
-  push:
-  pull_request:
+#       - name: Setup Go
+#         uses: actions/setup-go@v5
+#         with:
+#           go-version-file: go.mod
 
-jobs:
-  test-e2e:
-    name: Run on Ubuntu
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone the code
-        uses: actions/checkout@v4
+#       - name: Install the latest version of kind
+#         run: |
+#           curl -Lo ./kind https://kind.sigs.k8s.io/dl/latest/kind-linux-amd64
+#           chmod +x ./kind
+#           sudo mv ./kind /usr/local/bin/kind
 
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version-file: go.mod
+#       - name: Verify kind installation
+#         run: kind version
 
-      - name: Install the latest version of kind
-        run: |
-          curl -Lo ./kind https://kind.sigs.k8s.io/dl/latest/kind-linux-amd64
-          chmod +x ./kind
-          sudo mv ./kind /usr/local/bin/kind
-
-      - name: Verify kind installation
-        run: kind version
-
-      - name: Running Test e2e
-        run: |
-          go mod tidy
-          make test-e2e
+#       - name: Running Test e2e
+#         run: |
+#           go mod tidy
+#           make test-e2e
