--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -1,10 +1,13 @@
 name: Build & Push
+
 on:
   push:
     branches: [main]
+
 jobs:
   docker:
     runs-on: self-hosted
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -17,14 +20,19 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Set-ag
+
+      - name: Set tag
         id: vars
-        run: echo "TAG=$(date +'%Y%m%d')-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+        run: echo "TAG=$(date +'%Y%m%d')-$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      - name: Debug tag
+        run: |
+          echo "Tag is: ${{ steps.vars.outputs.TAG }}"
 
       - name: Build and Push
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/arm64
+          platforms: linux/amd64
           push: true
           tags: manojthedonut/tsingress-controller:${{ steps.vars.outputs.TAG }}
